Fixing "Required?" and "Read Only?" dropdown styling on small screens

--- a/css/admin.css
+++ b/css/admin.css
@@ -429,7 +429,7 @@
 	margin: 12px 0;
 }
 .admin_page_pmpro-userfields .pmpro_userfield-field-settings .pmpro_userfield-field-setting-dual {
-	display: flex;
+	column-count: 2;
 }
 .admin_page_pmpro-userfields .pmpro_userfield-field-settings .pmpro_userfield-field-setting-dual .pmpro_userfield-field-setting {
     margin: 0;
